--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ RoxygenNote: 7.2.0
 Suggests: 
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    withr
 VignetteBuilder: knitr
 Config/testthat/edition: 3
 Imports: 
