--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
-Package: netvis
-Title: What the Package Does (One Line, Title Case)
+Package: anvis
+Title: Automated Network VISualization: A package for Network Comparisons and Visual Styling
 Version: 0.0.0.9000
 Authors@R: 
     person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
