--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,15 @@
 Package: anvis
 Title: Automated Network VISualization: Facilitating interpretation and comparison of networks by visualizing derived network properties
-Version: 0.0.0.9000
-Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+Version: 0.99.0
+Authors@R: c(
+    person("Robert", "Koetsier", email = "robertkoetsier778@gmail.com", role = "aut", 
+           comment = c(ORCID = "0000-0002-4477-5401")),
+    person("Sanjeevan", "Jahagirdar", email = "first.last@example.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    )
+Description: This package automates the process of creating network 
+    visualizations. It generates visual styling for network properties 
+    to highlight the most relevant features. 
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
@@ -18,7 +23,7 @@ Suggests:
     withr
 VignetteBuilder: knitr
 Config/testthat/edition: 3
-biocViews:
+biocViews: Network, GraphAndNetwork, Visualization
 Imports: 
     BioNet,
     colorspace,
